Added synth django app

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ synth_backend/config/config.toml
 synth_backend/synth_backend/config/config.toml
 synth_vue/src/assets/logo.png
 synth_vue/public/favicon.ico
+synth_backend/apps/no file
