--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ synth_backend/synth_backend/config/config.toml
 synth_vue/src/assets/logo.png
 synth_vue/public/favicon.ico
 synth_backend/apps/no file
+synth_backend/apps/synths/__pycache__/__init__.cpython-38.pyc
+synth_backend/apps/synths/__pycache__/admin.cpython-38.pyc
+synth_backend/apps/synths/__pycache__/apps.cpython-38.pyc
+synth_backend/apps/synths/__pycache__/models.cpython-38.pyc
+synth_backend/apps/synths/migrations/0001_initial.py
+synth_backend/apps/synths/migrations/__pycache__/__init__.cpython-38.pyc
+synth_backend/apps/synths/migrations/__pycache__/0001_initial.cpython-38.pyc
+synth_backend/synth_backend/__pycache__/settings.cpython-38.pyc
